Fix icon column at small screen sizes. Fix icons collapsing.

--- a/static/sass/custom/_search-results.scss
+++ b/static/sass/custom/_search-results.scss
@@ -22,6 +22,7 @@
 
       &:first-child {
         flex: 0.25;
+        min-width: 5rem;
         padding-right: 0;
       }
     }
@@ -66,6 +67,7 @@
 
   &__icon {
     border-radius: $icon-size / 2;
+    display: inline-block;
     height: $icon-size;
     width: $icon-size;
     vertical-align: bottom;
